--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://database-1.chjpfdgbxlbi.ap-southeast-2.rds.amazonaws.com/students
-spring.datasource.username= admin
-spring.datasource.password= fred2002
+spring.datasource.url= jdbc:mysql://localhost:3306/studentdb
+spring.datasource.username= root
+spring.datasource.password= MyPass
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
